syntax = "proto3";
package centurion;

message TaskBucket {
  string id = 1;
  string name = 2;
}
